<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
       >

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/inputFieldStyle"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/edt_pwd"
            />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/inputFieldStyle"
            android:hint="@string/password_hint"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/user_login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login_button"
            style="@style/buttonStyle"
            android:background="@drawable/login_fading_ripple"
            android:layout_marginStart="@dimen/_25dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_26dp"
            android:layout_marginBottom="@dimen/_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_pwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>